# Weaselytics

./: README.md  pyproject.toml  weaselytics.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/: WORKFLOW  comparator.sh  data_aggregator.py  loop_bl.sbatch  loop_extract.sh  merger.sh  stats_analysis.py  viz_data.py
weaselytics/: PeakFitters.py  __init__.py  baseline.py  export.py  fcut.md  parser.py  parsers.py  peakfitting.py  peakfitting.py~  plot.py  smoothing.py  utils.py  weaselytics.py
